Last update 1 nov 2021

--- a/1_Test_tensor_op/CMakeLists.txt
+++ b/1_Test_tensor_op/CMakeLists.txt
@@ -28,7 +28,7 @@ add_pfunit_ctest (my_test_tensor_op1  #Name of the created executable
 
 #add_pfunit_ctest (my_test_tensor_llpack  #Name of the created executable
 #  TEST_SOURCES ${test_srcs}
-##   OTHER_SOURCES a.F90 b.F90 ...
+#   OTHER_SOURCES a.F90 b.F90 ...
 #  a.F90 b.F90 ... 
 #  LINK_LIBRARIES  /usr/lib/x86_64-linux-gnu/liblapack.a
 #  )
